[package]
name = "trace-explorer"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3.1"
itertools = "0.13.0"
egui = "0.29"
eframe = { version = "0.29", default-features = false, features = [
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
] }
log = "0.4.22"
env_logger = "0.11.5"
addr2line = "0.24.2"
#proc-modules = { git = "https://github.com/MikeWalrus/proc-modules.git", version = "0.1.0" }
proc-modules = { path = "../proc-modules", version = "0.1.0" }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.133"
rangemap = "1.5.1"


[lib]
name = "trace_explorer"

[[bin]]
name = "trace-process"
path = "src/trace-process.rs"

[[bin]]
name = "trace-explorer"
path = "src/trace-explorer.rs"
 